force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/Apttus_Config2__PaymentTerm__c.object-meta.xml
<CustomObject>
    <description>Represents a payment term associated with a quote, order or an agreement</description>
    <label>Payment Term</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>