force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the default payment for the organization</description>
    <inlineHelpText>Indicates whether this is the default payment for the organization</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>