force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Label__c</fullName>
    <description>The payment term label</description>
    <inlineHelpText>The payment term label</inlineHelpText>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
            <value>
                <fullName>Net 90 days</fullName>
            </value>
            <value>
                <fullName>Due Upon Receipt</fullName>
                <default>true</default>
                <label>Due Upon Receipt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>