force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__OffsetOccurrence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OffsetOccurrence__c</fullName>
    <description>Indicates how many times a specific offset will occur when calculating the payment term</description>
    <inlineHelpText>Indicates how many times a specific offset will occur when calculating the payment term</inlineHelpText>
    <label>Offset Occurrence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>