force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__OffsetType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OffsetType__c</fullName>
    <description>Indicates the date the payment term is calculated from</description>
    <inlineHelpText>Indicates the date the payment term is calculated from</inlineHelpText>
    <label>Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specific Day</fullName>
            </value>
            <value>
                <fullName>End of Month</fullName>
            </value>
            <value>
                <fullName>Start of Month</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>On Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>