force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__StartType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartType__c</fullName>
    <description>Indicates which type of start type will be used to calculate the payment term.</description>
    <inlineHelpText>Indicates which type of start type will be used to calculate the payment term.</inlineHelpText>
    <label>Start Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Day</fullName>
            </value>
            <value>
                <fullName>End of Quarter</fullName>
            </value>
            <value>
                <fullName>Start of Quarter</fullName>
            </value>
            <value>
                <fullName>End of Month</fullName>
            </value>
            <value>
                <fullName>Start of Month</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Invoice Date</fullName>
                <default>true</default>
                <label>Invoice Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>