force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__StartValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartValue__c</fullName>
    <description>Indicates the value for the start type which will be used to calculate the payment term.</description>
    <inlineHelpText>Indicates the value for the start type which will be used to calculate the payment term.</inlineHelpText>
    <label>Start Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>