force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/fields/Apttus_Config2__Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Value__c</fullName>
    <description>The payment term value</description>
    <inlineHelpText>The payment term value</inlineHelpText>
    <label>Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>