force-app/main/default/objects/Apttus_Config2__PaymentTerm__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__IsDefault__c</columns>
    <columns>Apttus_Config2__Value__c</columns>
    <columns>Apttus_Config2__Label__c</columns>
    <columns>Apttus_Config2__OffsetType__c</columns>
    <columns>Apttus_Config2__StartType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>